--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="static/css/style.css" rel="stylesheet"/>
-
 </head>
 <body>
 
@@ -35,7 +34,7 @@
                 <div id="post-it-container">
                     <div id="post-it-card" class="shadow">
                         <div class="front face">
-                            <div class="strategy">Create your very own card</div>
+                            <div class="strategy" style="font-family:'KOMIKAX'">Create your very own card</div>
                         </div>
                         <div class="back face center">
                             <p>Give a name to your card</p>
@@ -55,10 +54,10 @@
     <div id="board-modal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" style="width: 100%">
             <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title" id="titleName"></h4>
+            <div class="modal-content" style="background-color: #ACB9B6">
+                <div class="modal-header" style="background-color: #25232E">
+                    <button type="button" class="close" data-dismiss="modal" style="color:#B37436">&times;</button>
+                    <h4 style="color: #ED565F" class="modal-title" id="titleName"></h4>
                 </div>
                 <div class="modal-body">
                     <div class="row" id="modal-row">
@@ -66,7 +65,7 @@
                             <div class="col-xs-3">
                                 <div class="col-xs-12 status">
                                     <div class="status-header">
-                                        <h4>new</h4>
+                                        <h4 class="fontsforweb_fontid_236">new</h4>
                                         <button class="btn btn-primary" id="new-card">new card</button>
                                     </div>
                                     <div id="status-new" class="status-class">
@@ -76,7 +75,7 @@
                             <div class="col-xs-3">
                                 <div class="col-xs-12 status">
                                     <div class="status-header">
-                                        <h4>in progress</h4>
+                                        <h4 class="fontsforweb_fontid_236">in progress</h4>
                                     </div>
                                     <div id="status-in-progress" class="status-class">
                                     </div>
@@ -85,7 +84,7 @@
                             <div class="col-xs-3">
                                 <div class="col-xs-12 status" id="status-review">
                                     <div class="status-header">
-                                        <h4>review</h4>
+                                        <h4 class="fontsforweb_fontid_236">review</h4>
                                     </div>
                                     <div id="status-review" class="status-class">
                                     </div>
@@ -94,7 +93,7 @@
                             <div class="col-xs-3">
                                 <div class="col-xs-12 status" id="status-done">
                                     <div class="status-header">
-                                        <h4>done</h4>
+                                        <h4 class="fontsforweb_fontid_236">done</h4>
                                     </div>
                                     <div id="status-done" class="status-class">
                                     </div>
